--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,41 +138,16 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-margin {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead,brand,cost, h3 {
+.benefit-margin h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-margin img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -184,7 +159,7 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
-.footer h2 {
+/*Changed H2 tag to H4*/
+.footer h4 {
     font-size: 20px;
 }
